# palingenesis

./: .gitignore  .ignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: audit.yaml  ci.yaml
.opencode/command/: bmad-bmm-build-cycle.md  bmad-task-logger.md
.sisyphus/plans/: sprint-status-update.md
_bmad-output/implementation-artifacts/: 1-1-project-initialization-from-starter-template.md  1-2-cli-framework-with-clap-subcommands.md  1-3-platform-specific-path-resolution.md  1-4-state-persistence-layer.md  1-5-pid-file-management.md  1-6-unix-socket-ipc-server.md  10-1-telegram-bot-module-setup.md  2-1-file-system-watcher-setup.md  2-2-session-file-parser-frontmatter-extraction.md  2-3-process-detection-opencode-start-stop.md  2-4-stop-reason-classification-rate-limit.md  2-5-stop-reason-classification-context-exhaustion.md  2-6-stop-reason-classification-user-exit.md  2-7-monitor-event-channel.md  3-1-resume-strategy-trait.md  3-2-same-session-resume-strategy.md  3-3-new-session-resume-strategy.md  3-4-session-backup-before-new-session.md  3-5-exponential-backoff-implementation.md  3-6-audit-trail-logging.md  3-7-pause-command-implementation.md  3-8-resume-command-implementation.md  3-9-force-new-session-command.md  4-1-config-schema-definition.md  4-2-config-init-command.md  4-3-config-show-command.md  4-4-config-validate-command.md  4-5-config-edit-command.md  4-6-hot-reload-via-sighup.md  4-7-auto-detect-ai-assistants.md  6-1-http-api-server-setup.md  6-2-health-endpoint.md  6-3-status-api-endpoint.md  6-4-control-api-endpoints.md  6-5-events-sse-stream.md  6-6-discord-slack-bot-commands.md  7-1-prometheus-metrics-endpoint.md  7-2-core-metrics-implementation.md  7-3-time-saved-metric.md  7-4-saves-count-metric.md  (+17 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/bmm/workflows/4-implementation/build-cycle/: instructions.md  workflow.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
benches/: example.rs
config/: default.toml
grafana/: README.md  palingenesis-dashboard.json
launchd/: com.palingenesis.plist
logs/tasks/: 2026-02-05.jsonl  2026-02-06.jsonl
src/: lib.rs  main.rs  test_utils.rs
src/bot/: auth.rs  commands.rs  discord.rs  executor.rs  mod.rs  slack.rs
src/cli/: app.rs  mod.rs
src/cli/commands/: config.rs  daemon.rs  logs.rs  mcp.rs  mod.rs  session.rs  status.rs
src/config/: mod.rs  paths.rs  schema.rs  validation.rs
src/daemon/: core.rs  mod.rs  pid.rs  shutdown.rs  signals.rs  state.rs
src/http/: events.rs  mod.rs  server.rs
src/http/handlers/: bot_discord.rs  bot_slack.rs  control.rs  events.rs  health.rs  metrics.rs  mod.rs  status.rs
src/ipc/: client.rs  mod.rs  protocol.rs  socket.rs
src/mcp/: mod.rs  protocol.rs  server.rs
src/monitor/: classifier.rs  core.rs  detection.rs  events.rs  frontmatter.rs  mod.rs  process.rs  session.rs  watcher.rs
src/notify/: channel.rs  discord.rs  dispatcher.rs  error.rs  events.rs  mod.rs  ntfy.rs  slack.rs  webhook.rs
src/opencode/: client.rs  mod.rs  process.rs
src/resume/: backoff.rs  backup.rs  context.rs  error.rs  mod.rs  new_session.rs  outcome.rs  same_session.rs  selector.rs  strategy.rs  time_saved.rs
src/state/: audit.rs  mod.rs  schema.rs  store.rs
src/telemetry/: metrics.rs  mod.rs  otel.rs  tracing.rs
systemd/: palingenesis.service
tests/: audit_test.rs  backoff_test.rs  bot_integration.rs  classifier_test.rs  cli_test.rs  config_edit_test.rs  config_init_test.rs  config_schema_test.rs  config_show_test.rs  config_validate_test.rs  daemon_test.rs  ipc_test.rs  mcp_config_test.rs  mcp_jsonrpc.rs  mcp_stdio.rs  monitor_event_channel_test.rs  new_session_strategy_test.rs  paths_test.rs  pid_file_test.rs  resume_context_outcome_test.rs  resume_selector_test.rs  resume_strategy_trait_test.rs  same_session_strategy_test.rs  session_backup_test.rs  session_parser_test.rs  state_test.rs  watcher_test.rs
tests/fixtures/: clean_exit.txt  context_exceeded.txt  rate_limit_429.txt  rate_limit_anthropic.json  rate_limit_retry_after.txt  session_complete.md  session_invalid_yaml.md  session_no_frontmatter.md  session_string_steps.md  session_valid.md  token_limit.txt  user_exit_command.txt  user_exit_ctrl_c.txt
