[package]
name = "palingenesis"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Agent resurrection system for continuous AI workflow execution"
license = "MIT"
authors = ["Jack"]

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"

# HTTP server
axum = "0.8.8"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "timeout", "cors"] }

# CLI parsing
clap = { version = "4.5.50", features = ["derive", "env"] }

# Serialization & config
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
toml = "0.9.11"
regex = "1.11"

# File watching
notify = "8.2.0"
notify-debouncer-full = "0.7.0"

# HTTP client (for webhooks)
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }

# Logging & tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
rand = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"
async-trait = "0.1"

# Platform directories
dirs = "6.0"
fs2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Optional: OTEL (Growth feature)
opentelemetry = { version = "0.31.0", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
systemd = { version = "0.10", optional = true }

[features]
default = []
otel = ["opentelemetry"]
systemd = ["dep:systemd"]

[dev-dependencies]
tempfile = "3.18"
assert_cmd = "2.0"
predicates = "3.1"
tokio = { version = "1.49", features = ["test-util", "macros", "rt-multi-thread"] }
http-body-util = "0.1"
